Added sections, File creation (CSS)
Added sections (health bar, sprite, moves) to the main index file. Created a CSS stylesheet called "style.css"

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turn-based-game</title>
+    <link rel="stylesheet" href="/Images/style.css">
 </head>
 <body>
+    <div class="container">
+        <section class="healthbar">
+
+        </section>
+
+        <section class="sprite">
+            <div class="pkmn-img"></div>
+            <div class="message"></div>
+        </section>
+
+        <section class="moves">
+
+        </section>
+    </div>
     
 </body>
 </html>
