Added grid styling and areas (CSS and HTML)
Added grid display to and within health bar, sprite, and moves section. Added child divs to each section

--- a/index.html
+++ b/index.html
@@ -8,18 +8,36 @@
     <link rel="stylesheet" href="/Images/style.css">
 </head>
 <body>
-    <div class="container">
-        <section class="healthbar">
-
+    <div class="container">.container
+        <section class="healthbar">.healthbar
+            <div id="healthbar-left">#healthbar-left</div>
+            <div id="healthbar-right">#healthbar-right</div>
         </section>
 
-        <section class="sprite">
-            <div class="pkmn-img"></div>
-            <div class="message"></div>
+        <section class="sprite">.sprite
+            <div id="sprite-left">#sprite-left
+                <div class="pokemon-img" id="pokemon-img-left">#pokemon-img-left</div>
+                <div class="message" id="pokemon-message-left">#pokemon-message-left</div>
+            </div>
+            <div id="sprite-right">
+                <div class="pokemon-img" id="pokemon-img-right">#pokemon-img-right</div>
+                <div class="message" id="pokemon-message-right">#pokemon-message-right</div>
+            </div>
         </section>
 
-        <section class="moves">
-
+        <section class="moves">.moves
+            <div class="moves-grid" id="moves-left">#moves-left
+                <div class="move" id="pokemon-left-move1">#pokemon-left-move1</div>
+                <div class="move" id="pokemon-left-move2">#pokemon-left-move2</div>
+                <div class="move" id="pokemon-left-move3">#pokemon-left-move3</div>
+                <div class="move" id="pokemon-left-move4">#pokemon-left-move4</div>
+            </div>
+            <div class="moves-grid" id="moves-right">#moves-right
+                <div class="move" id="pokemon-right-move1">#pokemon-right-move1</div>
+                <div class="move" id="pokemon-right-move2">#pokemon-right-move2</div>
+                <div class="move" id="pokemon-right-move3">#pokemon-right-move3</div>
+                <div class="move" id="pokemon-right-move4">#pokemon-right-move4</div>
+            </div>
         </section>
     </div>
     
