Filling in wireframe
Changed styling of different sections to create a wireframe

--- a/index.html
+++ b/index.html
@@ -8,10 +8,35 @@
     <link rel="stylesheet" href="/Styles/style.css">
 </head>
 <body>
-    <div class="container">.container
-        <section class="healthbar">.healthbar
-            <div id="healthbar-left">#healthbar-left</div>
-            <div id="healthbar-right">#healthbar-right</div>
+    <div class="container">
+        .container
+        <section class="healthbar">
+            .healthbar
+            <!-- Left Healthbar -->
+            <div id="healthbar-left">
+                #healthbar-left
+                <div class="healthbar-info" id="healthbar-left-info">
+                    #healthbar-left-info
+                    <div class="healthbar-name" id="healthbar-left-name">
+                        #healthbar-left-name
+                    </div>
+                    <div class="healthbar-hp" id="healthbar-left-hp">
+                        #healthbar-left-hp
+                    </div>
+                </div>
+            </div>
+            <!-- Right Healthbar -->
+            <div id="healthbar-right">#healthbar-right
+                <div class="healthbar-info" id="healthbar-right-info">
+                    #healthbar-right-info
+                    <div class="healthbar-name" id="healthbar-right-name">
+                        #healthbar-right-name
+                    </div>
+                    <div class="healthbar-hp" id="healthbar-right-hp">
+                        #healthbar-right-hp
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="sprite">.sprite
@@ -19,7 +44,7 @@
                 <div class="pokemon-img" id="pokemon-img-left">#pokemon-img-left</div>
                 <div class="message" id="pokemon-message-left">#pokemon-message-left</div>
             </div>
-            <div id="sprite-right">
+            <div id="sprite-right">#sprite-right
                 <div class="pokemon-img" id="pokemon-img-right">#pokemon-img-right</div>
                 <div class="message" id="pokemon-message-right">#pokemon-message-right</div>
             </div>
