Created Database with 3 Pokémon
Created water, fire, and grass types. Created Pokémon class constructor. Created Blastoise, Charizard, and Venasaur class by extending Pokémon class. Created test Pokémon 1, 2, and 3 using class constructors. Logged to console test Pokémon properties.

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         </section>
 
         <section class="moves">.moves
-            <div class="moves-grid" id="moves-left">#moves-left
+            <div class="moves-grid" id="moves-left">
                 <div class="move" id="pokemon-left-move1">#pokemon-left-move1</div>
                 <div class="move" id="pokemon-left-move2">#pokemon-left-move2</div>
                 <div class="move" id="pokemon-left-move3">#pokemon-left-move3</div>
                 <div class="move" id="pokemon-left-move4">#pokemon-left-move4</div>
             </div>
-            <div class="moves-grid" id="moves-right">#moves-right
+            <div class="moves-grid" id="moves-right">
                 <div class="move" id="pokemon-right-move1">#pokemon-right-move1</div>
                 <div class="move" id="pokemon-right-move2">#pokemon-right-move2</div>
                 <div class="move" id="pokemon-right-move3">#pokemon-right-move3</div>
