--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
             </div>
         </section>
     </div>
-    <script src="/Apps/app.js"></script>
+    <script type="module" src="/Apps/app.js"></script>
 </body>
 </html>
