Consolidated code animated healthbar
brought code from multiple files into one, created a healthbar for each pokemon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="healthbar-name" id="healthbar-left-name">
                         #healthbar-left-name
                     </div>
-                    <div class="healthbar-hp" id="healthbar-left-hp">
+                    <div class="healthbar-hp" id="healthbar-left-hp" style="width: 100%;">
                         #healthbar-left-hp
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                     <div class="healthbar-name" id="healthbar-right-name">
                         #healthbar-right-name
                     </div>
-                    <div class="healthbar-hp" id="healthbar-right-hp">
+                    <div class="healthbar-hp" id="healthbar-right-hp" style="width: 100%;">
                         #healthbar-right-hp
                     </div>
                 </div>
