Moved Old Modules to Misc Folder
Attempted to implement new features but reverted to previous version for simplicity. Moved former module files to misc folder

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <section class="sprite">
             <div id="sprite-left">
                 <div class="pokemon-img" >
-                    <img id="pokemon-img-left" src="#" alt="#">
+                    <img id="pokemon-img-left" src="#" >
                 </div>
                 <div class="message" id="pokemon-message-left"> </div>
             </div>
             <div id="sprite-right">
                 <div class="pokemon-img" >
-                    <img id="pokemon-img-right" src="#" alt="#">
+                    <img id="pokemon-img-right" src="#" >
                 </div>
                 <div class="message" id="pokemon-message-right"> </div>
             </div>
@@ -69,6 +69,6 @@
             </div>
         </section>
     </div>
-    <script type="module" src="/Apps/app.js"></script>
+    <script type="module" src="/Apps/script.js"></script>
 </body>
 </html>
